[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A small entartaining project with 5 simple mathematical games."
authors = ["Artyom Shestakov <sartiom1@gmail.com>"]
readme = "README.md"
classifiers = ["Environment :: Console",
               "Programming Language :: Python :: 3.10",
               "Topic :: Games/Entertainment"]
packages = [{include = "brain_games"}]
repository = "https://github.com/SHArtyom/python-project-49"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
